# MachineLearningCpp

./: README.md
DeepLearningFromScratch/: .gitignore  DeepLearningFromScratch.sln  README.MD
DeepLearningFromScratch/Foundations/: Foundations.vcxproj
DeepLearningFromScratch/Foundations/src/: main.cpp
DeepLearningFromScratch/Fundamentals/: Fundamentals.vcxproj
DeepLearningFromScratch/Fundamentals/src/: main.cpp
DeepLearningFromScratch/notes/: 01_foundations.txt  02_fundamentals.txt
DigitRecognition/: CMakeLists.txt  README.md
DigitRecognition/include/: Coheir.h  DataHandler.h  data.h
DigitRecognition/kmeans/: CMakeLists.txt
DigitRecognition/kmeans/include/: KMeans.h
DigitRecognition/kmeans/src/: KMeans.cpp  main.cpp
DigitRecognition/knn/: CMakeLists.txt
DigitRecognition/knn/include/: KNN.h
DigitRecognition/knn/src/: KNN.cpp  main.cpp
DigitRecognition/src/: Coheir.cpp  DataHandler.cpp  data.cpp  main.cpp
include/: DataHandler.h  data.h
src/: data.cpp
